apps/backend00/k8s/overlays/canary/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/rev: asm-managed-stable
  name: backend00-prod
