apps/backend00/k8s/overlays/canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend00
  name: backend00
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 8080
  selector:
    app: backend00
  type: ClusterIP
