apps/backend00/k8s/overlays/canary/vs.yaml
# Copyright 2023 Google LLC All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend00-vs
spec:
  hosts:
  - "*"
  gateways:
  - backend00-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: backend00.backend00-prod.svc.cluster.local
        subset: prod
      weight: 90
    - destination:
        host: backend00.backend00-prod.svc.cluster.local
        subset: canary
      weight: 10
